--- a/Muscle_Mechanics_TC/css/purpose.css
+++ b/Muscle_Mechanics_TC/css/purpose.css
@@ -191,11 +191,11 @@ nav a:hover {
 }
 
 .banner h1 {
-  font-family: 'Permanent Marker', cursive;
+  font-family: 'Dosis', sans-serif;
   text-align: center;
   margin-right: 5px;
   margin-left: 5px;
-  color: yellow; 
+  color: #fff; 
   text-shadow: 2px 2px 10px #000;
   font-size: 115px;
   font-weight: 300;
@@ -256,93 +256,64 @@ nav a:hover {
 
 /* -- Section One -- */
 
-#one .food h2 {
-  font-size: 34px;
-  padding: 20px;
-  background: skyblue;
-  font-family: 'Dosis', sans-serif;
-}
 
 #one {
   width: 63%;
   margin: auto;
+  background: url('../img/flag.jpeg') fixed;
+  background-size: cover;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  position: relative;
 }
 
-#one .food_img {
-  width: 100%;
+#one .video video {
+  width: 96%;
+  margin: 15px;
+  border-radius: 5px;
+  border: 2px solid #000;
 }
 
-#one .food_img img {
-  width: 100%;
+#one .video input {
+  background: black;
 }
 
-#one .breakfast {
-  margin: 0 auto;
+#one .video_cred h4 {
+  position: absolute;
+  bottom: 35px;
+  left: 35px;
 }
 
-#one .lunch {
-  margin: 0 auto;
-}
-
-#one .dinner {
-  margin: 0 auto;
-}
-
-#one table {
-  width: 100%;
-}
-
-#one table th {
-  padding: 20px;
-  font-size: 24px;
-  background: skyblue;
-}
-
-#one table td {
-  padding: 15px;
-  padding-left: 50px;
-  background: lightgray;
+#one .video_cred h4 a {
+  color: #fff;
 }
 
 #two {
-  width: 100%;
+  width: 63%;
+  margin: auto;
+}
+
+.two_change {
+  background: linear-gradient(to bottom, #fff 0.9%, lightgray, #fff);
+  color: #000;
+  transition: all 3s;
+}
+
+#two .philosophy h2 {
+  font-size: 28px;
+  padding: 20px;
+}
+
+#two .philosophy p {
+  font-size: 20px;
+  padding: 20px;
+  line-height: 2;
 }
 
 #two .snack_head {
   margin-top: 150px;
   width: 100%;
   text-align: center;
-}
-
-
-
-#two .snacks {
-  height: 450px;
-  margin-top: 100px;
-  float: left;
-  width: 33%;
-}
-
-#two .snacks h3 {
-  color: #fff;
-  padding-top: 130px;
-  text-align: center;
-  text-shadow: 2px 2px 10px black;
-}
-
-#two .mix {
-  background: url('../img/trailmix.png') no-repeat;
-  background-size: contain;
-}
-
-#two .fruit {
-  background: url('../img/fruit.jpg') no-repeat;
-  background-size: contain;
-}
-
-#two .yogurt {
-  background: url('../img/yogurt.png') no-repeat;
-  background-size: contain;
 }
 
 .hide_ads_left {
