added more media perameters

--- a/Muscle_Mechanics_TC/css/MMTC.css
+++ b/Muscle_Mechanics_TC/css/MMTC.css
@@ -14,7 +14,7 @@ html {
 }
 
 #container {
-  max-width: 90em;
+  max-width: 75em;
   margin: 0 auto;
 }
 
@@ -45,7 +45,7 @@ header {
   border-bottom: 1px solid #fff;
   padding: .625em 0;
   position: fixed;
-  width: 90em;
+  width: 75em;
   top: 0;
   z-index: 10;
   display: none;
@@ -110,10 +110,7 @@ nav a:hover {
 }
 
 @media (max-width: 480px) {
-  html {
-    width: 90em;
-  }
-  
+
   header {
     width: 96%;
   }
@@ -205,7 +202,7 @@ nav a:hover {
   margin-left: 200px;
   background-color: #000;
   color: #fff; 
-  font-size: 100px;
+  font-size: 83px;
   font-weight: 300;
   opacity: 0.8;
 }
@@ -240,10 +237,9 @@ nav a:hover {
 #options .nav_options {
   position: relative;
   float: left;
-  width: 32.86%;
+  width: 33.3%;
   height: 30vh;
   text-align: center;
-  margin: 5px;
   cursor: pointer;
 }
 
@@ -403,7 +399,7 @@ nav a:hover {
 }
 
 .Info_slides {
-  width: 100%;
+  max-width: 100%;
   background: url('..img/section3Background.jpg');
   padding-bottom: 20px;
 }
@@ -411,15 +407,18 @@ nav a:hover {
 .Info_slides .info_imgs {
   text-align: center;
   display: none;
-}
-
-.Info_slides .info_imgs {
   padding-top: 10px;
 }
 
-.Info_slides .info_imgs .imgs:last-child {
-  float: none;
+.Info_slides .info_imgs .photo {
+  float: left;
+  width: 33.3%;
+  height: 500px;
+}
+
+.Info_slides .info_imgs .photo img {
   width: 100%;
+  height: 500px;
 }
 
 /* -- Section Three -- */
