--- a/Muscle_Mechanics_TC/css/strength.css
+++ b/Muscle_Mechanics_TC/css/strength.css
@@ -9,12 +9,16 @@ a {
   color: black;
 }
 
+p {
+  text-align: justify;
+}
+
 html {
   background: #fff;
 }
 
 #container {
-  max-width: 75em;
+  max-width: 90em;
   margin: 0 auto;
 }
 
@@ -45,7 +49,7 @@ header {
   border-bottom: 1px solid #fff;
   padding: .625em 0;
   position: fixed;
-  width: 75em;
+  width: 90em;
   top: 0;
   z-index: 10;
   display: none;
@@ -55,7 +59,7 @@ header {
   background-color: #000;
   padding: .625em 0;
   position: fixed;
-  width: 75em;
+  width: 90em;
   top: 0;
   z-index: 10;
   transition: all 3s;
@@ -261,16 +265,16 @@ nav a:hover {
 #options {
   max-width: 100%;
   position: relative;
-  z-index: 1;
 }
 
 #options .nav_options {
   position: relative;
   float: left;
-  width: 33.3%;
+  width: 33.33%;
   height: 30vh;
   text-align: center;
   cursor: pointer;
+  border: 2px solid #fff;
 }
 
 #options .home {
@@ -380,7 +384,7 @@ nav a:hover {
   width: 180px;
   position: fixed;
   top: 300px;
-  left: 22px;
+  left: 35px;
   transition: all .5s;
 }
 
@@ -396,7 +400,7 @@ nav a:hover {
   width: 180px;
   position: fixed;
   top: 300px;
-  right: 22px;
+  right: 35px;
   transition: all .5s;
 }
 
